[gd_scene load_steps=3 format=3 uid="uid://dr8m5hati0f1o"]

[ext_resource type="Theme" uid="uid://8bcavu88mft3" path="res://Themes/MainTheme.tres" id="1_6yxss"]
[ext_resource type="Script" uid="uid://dnga3bdiyf1uy" path="res://Scenes/Menus/SimpleColorPicker.gd" id="2_wuara"]

[node name="SimpleColorPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6yxss")
script = ExtResource("2_wuara")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 0.623529)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ColorDisplay" type="ColorRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="RSlider" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/RSlider"]
layout_mode = 2
text = "R"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/RSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 9
ticks_on_borders = true

[node name="GSlider" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/GSlider"]
layout_mode = 2
text = "G"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/GSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 9
ticks_on_borders = true

[node name="BSlider" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/BSlider"]
layout_mode = 2
text = "B
"

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/BSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 9
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OkButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back
"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/RSlider/HSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GSlider/HSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/BSlider/HSlider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
